# research_paper_mcp

./: .gitignore  README.md  mcp_chatbot.py  mcp_chatbot_openrouter.py  pyproject.toml  requirements.txt  research_server.py  test_gemini.py  test_ollama.py  test_openrouter.py  test_openrouter_single.py  tools_description.json  tools_description2.json
